@@ -147,6 +147,11 @@ public:
 		return getInstance()->lucky_nations;
 	}
 
+	static string getUseConverterMod()
+	{
+	return getInstance()->useConverterMod;
+	}
+
 
 	static int getID()
 	{
@@ -193,6 +198,8 @@ private:
 	string	sea_spread;
 	string	spies;
 	string	lucky_nations;
+
+	string	useConverterMod;
 
 	int		id;
 };
