@@ -367,3 +367,4 @@ Revision	Log Message
 360		Mod files directory removed
 361		Create flags for new EU3 countries
 362		Merge in new empires
+363		Make countries included with the mod properly work
